# Mil

./: .cfignore  .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  fly.toml  handout_350_alignment.html  handout_capacity.html  handout_hermes_sl.html  handout_poam.html  handout_poam_graph.html  handout_training_pipeline.html  hermes_overview.html  hermes_overview_sl.html  main.py  platform_update_report.md  pyproject.toml  requirements-deploy.txt  requirements-lock.txt  requirements.txt  solver.py  training_app_sl.html  training_pipeline_sl.html
alembic/: env.py
apps/: launcher.py  portal.py  theme.py
maven_training/: DEPENDENCY_MAP.html  DEPENDENCY_MAP.md  DEPENDENCY_MAP_summary.html  MSS_PROGRAM_OVERVIEW.pptx  QUICK_START.md  README.md  _redirects  project_pdf_workflow.md  task_index.html
scripts/: audit.py  build_atis_packet.py  build_new_decks.py  build_one_slide.py  build_overview_slide.py  build_pdfs.py  build_png_decks.py  build_proto_army_data_orientation.py  build_proto_batch.py  build_proto_rollout.py  build_rollout_slide.py  build_tm10_decks.py  build_training_app.py  build_training_brief_slide.py  build_training_slide.py  capacity_graph.py  check_html_react_sync.py  check_platform_updates.py  check_sharepoint_sync.py  chrome_cdp.py  deep_audit.py  generate_dep_map.py  generate_exercise_data.py  generate_training_data.py  lint_dep_map.py  optimize_markdown.py  platform_feature_map.json  platform_state.json  publication_css.py  rewrite_sharepoint_links.py
sitrep_tracker/: __init__.py  (+5 more)
(+968 files in other folders)
