[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sitrep-tracker"
version = "1.0.0"
description = "USAREUR-AF SITREP management CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
sitrep = "sitrep_tracker.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sitrep_tracker*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101", "S603", "S607"]
# S101 = assert usage (ok in tests), S603/S607 = subprocess (ok for launcher)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
